# local_operator

./: .gitignore  CMakeLists.txt  Elasticity.ufl  Hyperelasticity.ufl  Lagrange.ufl  N1curl.ufl  README.md  Stokes.ufl  compilers-a64fx.yaml  compilers.yaml  generate_tsfc.py  graph.py  installation.md  kernel.hpp  lagrange.c  lagrange.h  lagrange1.c  main.cpp  mass.c  mass.h  mass.ufl  mf.cpp  n_s.ufl  problem.py  problem.ufl  problem.yaml  results  results_archer  run.py  run.sh  run_problem.py  run_yaml.py  tsfc_kernel.hpp  tsfc_kernel.py  utils.py
.github/workflows/: python-app.yml
Coefficients/: mass.cpp  mass_el.cpp  src.hpp  stiffness.cpp  utils.hpp
Coefficients/output/: curl_curl.py  graph.py  test.py
Coefficients/output_x/: data.py
Elasticity/: CMakeLists.txt  geometry.hpp  main.cpp  problem.hpp  run.sh
ElasticityHex/: CMakeLists.txt  geometry.hpp  main.cpp  problem.hpp
Laplacian/: CMakeLists.txt  geometry.hpp  laplacian-tet-a64fx-llvm.txt  main.cpp  out-a64fx-clang.txt  out-a64fx-gcc.txt  out-a64fx-llvm.txt  out-a64fx.txt  problem.hpp  run-a64fx-likwid.sh  run-a64fx-llvm.sh  run-a64fx.sh  run-icelake-gcc.sh  run-icelake-llvm.sh  run-milan-gcc.sh  run-milan-llvm.sh  run-test.sh  run.sh  types.hpp
Laplacian/likwid/: laplacian_FLOPS_DP_1_1_1_512.txt  (+71 more)
LaplacianHex/: CMakeLists.txt  geometry.hpp  laplacian-hex-a64fx-llvm.txt  main.cpp  out-a64fx.txt  problem.hpp  run-a64fx-likwid.sh  run-a64fx.sh  run-icelake-gcc.sh  run-icelake-llvm.sh  run-icelake.sh  run-milan-gcc.sh  run-milan-llvm.sh  run-milan.sh  run.sh  slurm_submit_icelake.sh  slurm_submit_milan.sh  types.hpp
Mass/: CMakeLists.txt  geometry.hpp  main.cpp  mass-tet-a64fx-gcc.txt  mass-tet-a64fx-llvm.txt  out-a64fx.txt  problem.hpp  run-a64fx-gcc.sh  run-a64fx-llvm.sh  run-a64fx.sh  run-icelake-gcc.sh  run-icelake-llvm.sh  run-milan-gcc.sh  run-milan-llvm.sh  run.sh  slurm_submit_icelake.sh  slurm_submit_milan.sh  types.hpp
Mass/likwid/: laplacian_FLOPS_DP_1_2__512.txt  laplacian_FLOPS_DP_1_5__512.txt  laplacian_FLOPS_DP_1_8__512.txt  laplacian_FLOPS_DP_8_4__512.txt  laplacian_FLOPS_DP_8_6__512.txt  laplacian_FLOPS_DP_8_7__512.txt  laplacian_L2_1_1__512.txt  laplacian_L2_1_2__512.txt  laplacian_L2_1_6__512.txt  laplacian_L2_1_8__512.txt  laplacian_L2_8_1__512.txt  laplacian_L2_8_3__512.txt  laplacian_L2_8_4__512.txt  laplacian_L2_8_7__512.txt  laplacian_L2_8_8__512.txt  laplacian_MEM_DP_1_1__512.txt  laplacian_MEM_DP_1_2__512.txt  laplacian_MEM_DP_1_3__512.txt  laplacian_MEM_DP_1_4__512.txt  laplacian_MEM_DP_1_8__512.txt  laplacian_MEM_DP_8_1__512.txt  laplacian_MEM_DP_8_4__512.txt  laplacian_MEM_DP_8_7__512.txt  mass_FLOPS_DP_1_1__512.txt  mass_FLOPS_DP_1_3__512.txt  mass_FLOPS_DP_1_4__512.txt  mass_FLOPS_DP_1_6__512.txt  mass_FLOPS_DP_1_7__512.txt  mass_FLOPS_DP_8_1__512.txt  mass_FLOPS_DP_8_2__512.txt  mass_FLOPS_DP_8_3__512.txt  mass_FLOPS_DP_8_5__512.txt  mass_FLOPS_DP_8_8__512.txt  mass_L2_1_3__512.txt  mass_L2_1_4__512.txt  mass_L2_1_5__512.txt  mass_L2_1_7__512.txt  mass_L2_8_2__512.txt  mass_L2_8_5__512.txt  mass_L2_8_6__512.txt  (+8 more)
MassHex/: CMakeLists.txt  hex_mass.hpp  main.cpp  mass-hex-a64fx-gcc.txt  mass-hex-a64fx-llvm-16.txt  mass-hex-a64fx-llvm-8.txt  mass-hex-a64fx-llvm.txt  out-a64fx.txt  problem.hpp  run-a64fx-gcc.sh  run-a64fx-llvm.sh  run-a64fx.sh  run-icelake-gcc.sh  run-icelake-llvm.sh  run-icelake.sh  run-likwid.sh  run-milan-clang.sh  run-milan-gcc.sh  run-milan.sh  run.sh  slurm_submit_icelake.sh  slurm_submit_milan.sh  types.hpp
MassHex/likwid/: mass_FLOPS_DP_16_4_1_512.txt  mass_FLOPS_DP_1_10_1_512.txt  mass_FLOPS_DP_1_11_1_512.txt  mass_FLOPS_DP_1_12_1_512.txt  mass_FLOPS_DP_1_13_1_512.txt  mass_FLOPS_DP_1_14_1_512.txt  mass_FLOPS_DP_1_15_1_512.txt  mass_FLOPS_DP_1_1_1_512.txt  mass_FLOPS_DP_1_2_1_512.txt  mass_FLOPS_DP_1_3_1_512.txt  mass_FLOPS_DP_1_4_1_512.txt  mass_FLOPS_DP_1_5_1_512.txt  mass_FLOPS_DP_1_6_1_512.txt  mass_FLOPS_DP_1_7_1_512.txt  mass_FLOPS_DP_1_8_1_512.txt  mass_FLOPS_DP_1_9_1_512.txt  mass_FLOPS_DP_8_10_1_512.txt  mass_FLOPS_DP_8_11_1_512.txt  mass_FLOPS_DP_8_12_1_512.txt  mass_FLOPS_DP_8_13_1_512.txt  mass_FLOPS_DP_8_14_1_512.txt  mass_FLOPS_DP_8_15_1_512.txt  mass_FLOPS_DP_8_1_1_512.txt  mass_FLOPS_DP_8_2_1_512.txt  mass_FLOPS_DP_8_3_1_512.txt  mass_FLOPS_DP_8_4_1_512.txt  mass_FLOPS_DP_8_5_1_512.txt  mass_FLOPS_DP_8_6_1_512.txt  mass_FLOPS_DP_8_7_1_512.txt  mass_FLOPS_DP_8_8_1_512.txt  mass_FLOPS_DP_8_9_1_512.txt  mass_L2_16_10_1_512.txt  mass_L2_16_11_1_512.txt  mass_L2_16_12_1_512.txt  mass_L2_16_13_1_512.txt  mass_L2_16_14_1_512.txt  mass_L2_16_15_1_512.txt  mass_L2_16_1_1_512.txt  mass_L2_16_2_1_512.txt  mass_L2_16_3_1_512.txt  (+81 more)
MassHex/output/: DATA_c4n3_0.txt  DATA_c4n3_1.txt  DATA_c4n3_10.txt  DATA_c4n3_11.txt  DATA_c4n3_12.txt  DATA_c4n3_13.txt  DATA_c4n3_14.txt  DATA_c4n3_15.txt  DATA_c4n3_16.txt  DATA_c4n3_17.txt  DATA_c4n3_18.txt  DATA_c4n3_19.txt  DATA_c4n3_2.txt  DATA_c4n3_20.txt  DATA_c4n3_21.txt  DATA_c4n3_22.txt  DATA_c4n3_23.txt  DATA_c4n3_24.txt  DATA_c4n3_25.txt  DATA_c4n3_26.txt  DATA_c4n3_27.txt  DATA_c4n3_28.txt  DATA_c4n3_29.txt  DATA_c4n3_3.txt  DATA_c4n3_30.txt  DATA_c4n3_31.txt  DATA_c4n3_32.txt  DATA_c4n3_33.txt  DATA_c4n3_34.txt  DATA_c4n3_35.txt  DATA_c4n3_36.txt  DATA_c4n3_37.txt  DATA_c4n3_38.txt  DATA_c4n3_39.txt  DATA_c4n3_4.txt  DATA_c4n3_40.txt  DATA_c4n3_41.txt  DATA_c4n3_42.txt  DATA_c4n3_43.txt  DATA_c4n3_44.txt  (+200 more)
bernstein/: compile.py  main.cpp
blis/: CMakeLists.txt  main.cpp  problem.hpp  run.sh
compiler/: __init__.py  compile.py  geometry.hpp
cross/: compile.py  main.cpp
ffc/: compile_ffc.py  main.cpp
ffcx/: CMakeLists.txt  compile.py  geometry.hpp  main.cpp  matrix.cpp
forms/: Elasticity.ufl  Helmholtz.ufl  Lagrange.ufl  Laplacian.ufl  Mass.py  Mass.ufl  N1curl.ufl  Stokes.ufl
info/: count_flops.py  kernel_info.py
lagrange/: lagrange.h  lagrange1.c  lagrange2.c  lagrange3.c  main.cpp  run_lagrange.py
nedelec/: CMakeLists.txt  main.cpp  nedelec.h  nedelec.ufl  nedelec1.c  nedelec2.c  nedelec3.c  results  run_nedelec.py
tsfc/: CMakeLists.txt  generate_tsfc.py  main.cpp
(+1 files in other folders)
